--- a/webtrackchamp.html
+++ b/webtrackchamp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrackChamp</title>
-    <link rel="icon" href="icon_app_big.png" type="image/x-icon" />
+    <link rel="icon" href="https://i.ibb.co/S5Y1YTK/icon-app-big.png" type="image/x-icon" />
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -69,7 +69,7 @@
   </head>
   <body>
     <div class="logo-container">
-      <img src="icon_app_big.png" alt="Logo de TrackChamp" />
+      <img src="https://i.ibb.co/S5Y1YTK/icon-app-big.png" alt="Logo de TrackChamp" />
     </div>
 
     <div class="button-container">
