--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         padding: 0.5em 0;
         background-color: #a7b3c0;
         font-size: 11px;
+        left: 0;
       }
     </style>
   </head>
